# quantumsettle

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.ps1
.github/workflows/: ci.yml
db/00_bootstrap/: 01_app_setup.sql
db/01_schema/: 01_dimensions.sql  02_trades.sql  03_audit.sql  04_external.sql  05_constraints.sql  06_mv_logs.sql
db/02_common/: 01_pkg_ops.sql  02_pkg_perf.sql
db/03_mviews/: 01_mv_daily_pnl.sql
db/04_optimized/: 01_pkg_ingest_optimized.sql  02_pkg_process_optimized.sql  03_pkg_report_optimized.sql
db/05_not_optimized/: 01_pkg_ingest_not_optimized.sql  02_pkg_process_not_optimized.sql  03_pkg_report_not_optimized.sql
db/99_seed/: 01_currencies.sql  02_exchanges.sql
docs/: architecture.md  flow.md  perf-story.md
py/quantumsettle/: __init__.py  config.py  db.py
py/quantumsettle/api/: _smoketest.py  main.py  run.py
py/quantumsettle/api/templates/: base.html  dashboard.html  perf.html
py/quantumsettle/bench/: explain.py  run.py
py/quantumsettle/faker/: generators.py  reference_data.py  run.py  seed.py
py/quantumsettle/scripts/: admin_setup.py  check_db.py  ingest.py  migrate.py  process.py  report.py  run_tests.py  schema_summary.py  show_errors.py
tests/plsql/: 00_pkg_test_util.sql  01_test_pkg_ingest.sql  02_test_pkg_process.sql  03_test_pkg_report.sql
tests/py/: test_smoke.py
