[project]
name = "quantumsettle"
version = "0.0.1"
description = "Post-trade settlement & reconciliation platform built on Oracle 23ai PL/SQL"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "QuantumSettle Author" }]

dependencies = [
    "oracledb>=2.4.0",
    "faker>=27.0.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["E501"]  # ruff format handles line length

[tool.pytest.ini_options]
testpaths = ["tests/py"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires running Oracle container",
]
